@@ -19,7 +19,7 @@
     <description>Backend API for DSA Learning Platform</description>
     
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <mapstruct.version>1.6.3</mapstruct.version>
         <lombok.version>1.18.36</lombok.version>
         <jwt.version>0.12.6</jwt.version>
@@ -136,7 +136,6 @@
                 <version>3.5.2</version>
                 <configuration>
                     <argLine>
-                        --enable-native-access=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
@@ -148,9 +147,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <release>21</release>
+                    <source>17</source>
+                    <target>17</target>
+                    <release>17</release>
                     <parameters>true</parameters>
                     <annotationProcessorPaths>
                         <path>
